feat: websocket connection
