# chat-app-backend/internal/api/chat.go
@@ -1,0 +1,36 @@
+package api
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/gorilla/websocket"
+	"github.com/labstack/echo/v4"
+)
+
+var (
+	upgrader = websocket.Upgrader{
+		CheckOrigin: func(r *http.Request) bool {
+			return true
+		},
+	}
+)
+
+func (h Handlers) GetChat(e echo.Context) error {
+	userId, _ := h.auth.VerifySession(e)
+	fmt.Println("temp", userId)
+
+	ws, err := upgrader.Upgrade(e.Response(), e.Request(), nil)
+	if err != nil {
+		return err
+	}
+	defer ws.Close()
+
+	for {
+		_, msg, err := ws.ReadMessage()
+		if err != nil {
+			e.Logger().Error(err)
+		}
+		fmt.Printf("%s\n", msg)
+	}
+}
